dt-bindings: fix sifive plic compatible string
Allow the compatible string of a Sifive plic node to specify only
"sifive,plic-1.0.0" without an additional required string specifying
the SoC implementing the IP block. With this change, the plic node of
RISC-V SoCs using a generic implementation of the plic without any SoC
specific tweak can be correctly defined.

Cc: Paul Walmsley <paul.walmsley@sifive.com>
Cc: Rob Herring <robh@kernel.org>
Cc: devicetree@vger.kernel.org
Signed-off-by: Damien Le Moal <damien.lemoal@wdc.com>

--- a/Documentation/devicetree/bindings/interrupt-controller/sifive,plic-1.0.0.yaml
+++ b/Documentation/devicetree/bindings/interrupt-controller/sifive,plic-1.0.0.yaml
@@ -41,9 +41,13 @@ maintainers:
 
 properties:
   compatible:
-    items:
-      - const: sifive,fu540-c000-plic
-      - const: sifive,plic-1.0.0
+    oneOf:
+      - items:
+          - const: sifive,fu540-c000-plic
+          - const: sifive,plic-1.0.0
+
+      - items:
+          - const: sifive,plic-1.0.0
 
   reg:
     maxItems: 1
